[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "blenderplot"
version = "1.0b0"
authors = [{name = "Evalf", email = "info@evalf.com"}]
description = "Plot surface triangulations with Blender."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]

[project.urls]
Home = "https://github.com/evalf/blenderplot/"
